project(lab12)
add_executable(lab12 main_12.cpp Student.h Student.cpp GraduationDao.h GraduationDaoImpl.h GraduationDaoImpl.cpp GraduationService.h GraduationServiceImpl.cpp GraduationServiceImpl.h Settlement.cpp Settlement.h SettlementStatistics.h SettlementStatisticsImpl.cpp SettlementStatisticsImpl.h)
